// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extracts reason and submits replyrequest 1`] = `
Object {
  "data": Object {
    "selectedArticleId": "selected-article-id",
  },
  "event": Object {
    "input": "💁 我的理由是：
Reason goes here",
  },
  "isSkipUser": undefined,
  "issuedAt": undefined,
  "replies": Array [
    Object {
      "text": "已經將您的需求記錄下來了，共有 1 人跟您一樣渴望看到針對這篇訊息的回應。若有最新回應，會寫在這個地方：https://cofacts.hacktabl.org/article/selected-article-id",
      "type": "text",
    },
    Object {
      "altText": "遠親不如近鄰🌟問問親友總沒錯。把訊息分享給朋友們，說不定有人能幫你解惑！",
      "template": Object {
        "actions": Array [
          Object {
            "label": "LINE 群組",
            "type": "uri",
            "uri": "line://msg/text/?%E6%88%91%E6%94%B6%E5%88%B0%E9%80%99%E5%89%87%E8%A8%8A%E6%81%AF%E7%9A%84%E6%83%B3%E6%B3%95%E6%98%AF%EF%BC%9A%0AReason%20goes%20here%0A%0A%E8%AB%8B%E5%B9%AB%E6%88%91%E7%9C%8B%E7%9C%8B%E9%80%99%E6%98%AF%E7%9C%9F%E7%9A%84%E9%82%84%E6%98%AF%E5%81%87%E7%9A%84%EF%BC%9Ahttps%3A%2F%2Fcofacts.hacktabl.org%2Farticle%2Fselected-article-id",
          },
          Object {
            "label": "臉書大神",
            "type": "uri",
            "uri": "https://www.facebook.com/dialog/share?openExternalBrowser=1&app_id=719656818195367&display=popup&quote=Reason%20goes%20here&hashtag=%23Cofacts%E6%B1%82%E8%A7%A3%E6%83%91&href=https%3A%2F%2Fcofacts.hacktabl.org%2Farticle%2Fselected-article-id",
          },
        ],
        "text": "說不定你的朋友裡，就有能替你解惑的人唷！
你想要 Call-out 誰呢？",
        "title": "遠親不如近鄰🌟問問親友總沒錯",
        "type": "buttons",
      },
      "type": "template",
    },
  ],
  "state": "__INIT__",
  "userId": undefined,
}
`;

exports[`handles the case when prefix does not match 1`] = `
Object {
  "data": Object {
    "selectedArticleId": "selected-article-id",
  },
  "event": Object {
    "input": "FOO",
  },
  "isSkipUser": undefined,
  "issuedAt": undefined,
  "replies": Array [
    Object {
      "text": "請點擊上面的「我也想知道」，或放棄這則，改轉傳其他訊息。",
      "type": "text",
    },
  ],
  "state": "ASKING_REPLY_REQUEST_REASON",
  "userId": undefined,
}
`;
